@@ -1,4 +1,0 @@
-SQLSoup provides a convenient way to map Python objects to relational database
-tables, with no declarative code of any kind. It's built on top of the
-SQLAlchemy ORM and provides a super-minimalistic interface to an existing
-database.
