@@ -1,10 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2014/02/03 10:21:13 rodent Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/sqlsoup.py
-${PYSITELIB}/sqlsoup.pyc
-${PYSITELIB}/sqlsoup.pyo
